# engcalc_fltk

./: CMakeLists.txt  enggcalc_fltk.desktop  main.cpp
include/: Bin.h  Custom_Output.h  Dec.h  Hex.h  Oct.h
src/: Bin.cpp  Custom_Output.cpp  Dec.cpp  Hex.cpp  Oct.cpp
